added template createFromHtmltag

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 3.11)
 
 project(litehtml LANGUAGES C CXX)
 include(CTest)
-enable_testing()
+#enable_testing()
 
 # Soname
 # MAJOR is incremented when symbols are removed or changed in an incompatible way
@@ -182,7 +182,8 @@ if(WIN32)
     file(TO_NATIVE_PATH ${XXD_COMMAND} XXD_COMMAND)
     file(TO_NATIVE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/include/master.css MASTER_FILE)
     add_custom_command(OUTPUT ${CMAKE_CURRENT_SOURCE_DIR}/src/master.css.inc
-        COMMAND type ${MASTER_FILE} | "${XXD_COMMAND}" -i > ${CMAKE_CURRENT_SOURCE_DIR}/src/master.css.inc)
+        COMMAND ${XXD_COMMAND} -i > ${CMAKE_CURRENT_SOURCE_DIR}/src/master.css.inc)
+#        COMMAND type ${MASTER_FILE} | "${XXD_COMMAND}" -i > ${CMAKE_CURRENT_SOURCE_DIR}/src/master.css.inc)
 else()
     add_custom_command(OUTPUT ${CMAKE_CURRENT_SOURCE_DIR}/src/master.css.inc
         COMMAND cat ${CMAKE_CURRENT_SOURCE_DIR}/include/master.css | xxd -i > ${CMAKE_CURRENT_SOURCE_DIR}/src/master.css.inc)
